fixed mobile nav background

--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -88,6 +88,7 @@
         position: absolute
         display: flex
         margin-top: 45px
+        background: white
     .nav__open
         .nav
             transform: translateX(0)
