--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -21,3 +21,8 @@
                 padding: 0px 0px 5px 0px
             h4
                 color: #9f958b
+    hr
+        background: #cdccca
+        border: 0
+        height: 1px
+        box-shadow: 0px 4px 5px 0px rgba(205,204,200,1)
