--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -1,6 +1,8 @@
 .wrapper
     display: flex
     flex-direction: column
+    .pagetitle
+        margin-top: 50px
     .overview
         display: flex
         justify-content: space-between
@@ -9,12 +11,12 @@
             border: 1px solid gold
             border-radius: 1.5rem
             box-shadow: 0px 0px 5px 1px gold
-            width: 45%
+            width: 60%
             padding: 10px
             display: flex
             flex-direction: column
             h4
-                margin-top: 10px
+                margin: 10px 0
                 color: gold
             p
                 flex: 1
@@ -26,7 +28,7 @@
                 h4
                     color: gold
         &__image
-            width: 45%
+            width: 38%
     .weeks
 
         h3
