--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -32,10 +32,13 @@
             width: 30%
 .program__overview
     display: flex
-    justify-content: space-between
+    // justify-content: space-between
+    background: lightgray
     &__card
         margin: 30px 0
-
+        // width: calc(100vw / 1.8 - 550px)
+        width: calc(1100px / 2.1)
+        // background: teal
         padding: 10px
         display: flex
         flex-direction: column
@@ -51,3 +54,6 @@
             display: flex
             h4
                 color: gold
+    &__image
+        width: 50%
+        background: coral
