--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -33,13 +33,13 @@
 .program__overview
     display: flex
     // justify-content: space-between
-    background: lightgray
+    background: mintcream
     &__card
         margin: 30px 0
         // width: calc(100vw / 1.8 - 550px)
         width: calc(1100px / 2.1)
         // background: teal
-        padding: 10px
+        padding: 100px 50px
         display: flex
         flex-direction: column
         h4
