--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -1,15 +1,22 @@
+@import "../base.sass"
 .banner
     &__col
         width: 100%
         display: flex
+        @include phone-large
+        flex-direction: column
         &__one
             width: 50%
+            @include phone-large
+                width: 100%
         &__two
             display: flex
             flex-direction: column
             width: 50%
             // background: seagreen
             justify-content: center
+            @include phone-large
+                width: 100%
             p
                 color: #5d5d5d
                 padding: 50px 0px 20px 0px
