--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -6,7 +6,7 @@
         justify-content: space-between
         border: 1px solid gold
         padding: 50px
-        margin: 100px 0
+        // margin: 100px 0
         hr
             background: gold
             border: 0
