--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -1,13 +1,16 @@
+@import "../base.sass"
 .wraper
     .signup
         padding: 50px 150px
-        margin: 30px 0
+        // margin: 30px 0
         border: 1px solid gold
         border-radius: 1.5rem
         box-shadow: 0px 0px 5px 1px gold
         align-items: center
         display: flex
         flex-direction: column
+        @include edgesnap
+            padding: 20px 15px
         h3
             margin-bottom: 20px
         p
@@ -21,8 +24,12 @@
             display: flex
             justify-content: space-between
             margin-top: 50px
+            @include navsnap
+                flex-direction: column
             &__steps
                 width: 57%
+                @include navsnap
+                    width: 98%
                 &__single
                     margin-bottom: 40px
                     h3
@@ -38,5 +45,7 @@
                 display: flex
                 align-items: center
                 width: 40%
+                @include navsnap
+                    width: 98%
                 &__gats
                     width: 100%
