--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -1,8 +1,8 @@
+@import "../base.sass"
 .wraper
     .pageinfo
         text-align: center
         h3
-            margin-top: 80px
             margin-bottom: 30px
         p
             margin-bottom: 50px
@@ -13,7 +13,6 @@
             border: 0
             height: 1px
     .photos
-        margin-top: 50px
         display: flex
         flex-wrap: wrap
         justify-content: space-between
@@ -21,3 +20,5 @@
             // display: fle
             width: 23%
             margin-bottom: 25px
+            @include navsnap
+                width: 48%
