--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -1,11 +1,14 @@
+@import "../base.sass" 
 .wrapper
     display: flex
     flex-direction: column
     .pagetitle
-        margin-top: 50px
+        // margin-top: 50px
     .overview
         display: flex
         justify-content: space-between
+        @include tablet-phone
+            flex-direction: column-reverse
         &__card
             margin: 30px 0
             border: 1px solid gold
@@ -15,6 +18,8 @@
             padding: 10px
             display: flex
             flex-direction: column
+            @include tablet-phone
+                width: 98%
             h4
                 margin: 10px 0
                 color: gold
@@ -29,6 +34,10 @@
                     color: gold
         &__image
             width: 38%
+            @include tablet-phone
+                width: 98%
+            @include edgesnap
+                margin: auto
     .weeks
 
         h3
