--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -1,3 +1,4 @@
+@import "../base.sass"
 .team
     display: flex
     flex-direction: column-reverse
@@ -8,11 +9,15 @@
         padding-bottom: 80px
         justify-content: space-between
         border-bottom: 1px solid #000  
+        @include navsnap
+            flex-direction: column
         &:first-child
             border-bottom: none
     
         &__bio
             width: 65%
+            @include navsnap
+                width: 100%
             &__name
                 color: #9e948b
                 display: flex
@@ -25,3 +30,5 @@
                 color: #686868
         &__img
             width: 30%   
+            @include navsnap
+                width: 100%
