--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -52,4 +52,11 @@
         // background: coral
         justify-content: space-between
         &__single
-            width: 20%
+            width: 25%
+            nav
+                display: flex
+                align-items: flex-end
+                flex-direction: column
+            &__image
+                width: 50%
+                margin: auto
