pulled in nav link Icons from backend and did some text styling

--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -60,3 +60,14 @@
             &__image
                 width: 50%
                 margin: auto
+            &__links
+                display: flex
+                width: 20%
+                justify-content: space-between
+                a
+                    width: 30%
+            &__title
+                display: flex
+                // background: skyblue
+                
+                text-align: center
