--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -14,11 +14,20 @@
     width: 100vw
     @include navsnap
         padding: 10px 0
+    &__title
+        width: 32%
+        display: flex
+        text-align: center
     h1
         // background: red
         a
             // font-size: .8em
             font-family: $mainfont
+    &__logo
+        // background: teal
+        width: 10%
+        height: 100%
+        
     .desktop
         font-size: .9em
         display: flex
