--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -76,12 +76,13 @@
                     margin: 25px
             &__links
                 display: flex
-                width: 20%
+                width: 45%
                 justify-content: space-between
+                margin: 10px 0
                 @include tablet-phone
                     width: 15%
                 a
-                    width: 30%
+                    width: 23%
             &__title
                 display: flex
                 // background: skyblue
