--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -1,3 +1,5 @@
+@import '../base.sass'
+
 #mc_embed_signup
     width: 100%
     // background: teal
@@ -13,7 +15,7 @@
                 width: 70%
             input
                 &[type="submit"]
-                    background: gold
+                    background: $accent
                     padding: 10px 35px
                     color: white
                     font-size: 1rem
@@ -25,6 +27,6 @@
                     font-size: 1rem
                     padding: 10px
                     width: 100%
-                    border: 1px solid gold
+                    border: 1px solid $accent
                     border-top-left-radius: 1.3rem
                     border-bottom-left-radius: 1.3rem
