--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -11,9 +11,9 @@
             flex-direction: column-reverse
         &__card
             margin: 30px 0
-            border: 1px solid gold
+            border: 1px solid $accent
             border-radius: 1.5rem
-            box-shadow: 0px 0px 5px 1px gold
+            box-shadow: 0px 0px 5px 1px $accent
             width: 60%
             padding: 10px
             display: flex
@@ -22,7 +22,7 @@
                 width: 98%
             h4
                 margin: 10px 0
-                color: gold
+                color: $accent
             p
                 flex: 1
             &__info 
@@ -31,7 +31,7 @@
                 justify-content: space-between
                 display: flex
                 h4
-                    color: gold
+                    color: $accent
         &__image
             width: 38%
             @include edgesnap
@@ -48,9 +48,9 @@
             flex-direction: column
             h4
                 margin-bottom: 15px
-                color: gold
+                color: $accent
                 width: 50%
-                border-bottom: 1px solid gold
+                border-bottom: 1px solid $accent
             h5
              
             p
