--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -19,9 +19,15 @@ $gradientdark: #38E96E
 
 $darkgrey: #253031
 
+
+//aga below, the three variables below are all the colors we should be using throughout the site, I cannot guarantee if that is actually the case but these are the only three we should be using. accent is the brown/gold, dark is the dark grey, light is the light gret
+//dark is headers and titles, light is less important text, both are used as text colors
+$accent: #A29680
+$dark: #393939
+$light: #5B5B5B
+
 //og
 // $accentdark: #102B3F
-$accentdark: #122235
 //dark greyish
 // $accentdark: #253031
 // $accentdark: #1F2728
@@ -29,8 +35,8 @@ $accentdark: #122235
 // $accentdark: #2A2D43
 // $accentdark: #222222
 // $accentlight: rgb(240,129,148)
-$accentlight: rgb(175,37,205)
 
+  
 //fonts 
 $mainfont: "Rubik", sans-serif
 $subfont: "Avenir", sans-serif
