--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -4,7 +4,8 @@
   padding: 0
   margin: 0 
   box-sizing: border-box
-  font-family: 'Rubik', sans-serif !important
+  // font-family: 'Rubik', sans-serif !important
+  font-family: 'Montserrat', sans-serif !important
   font-weight: 400
   a, a:visited 
     text-decoration: none
@@ -13,7 +14,7 @@ html
   width: 100% 
   font-size: 12pt
   overflow-x: hidden
-  color: $accentdark
+  color: $dark
   @include edgesnap 
     font-size: 1.5vw
   @media(max-width: 1000px)
@@ -27,23 +28,30 @@ html
   section 
     // background: red
     padding: 40px 0px
+  h2, h3, h4 
+    color: $dark
   h2 
-    font-size: 1.8em
+    font-size: 2.2em !important
+    font-weight: 300
+    // color: red !important
     // padding-top: .62em
     padding-bottom: 1em
     @include tablet-phone 
       font-size: 2.05em
       padding-bottom: 0.7em
   h3 
-    font-size: 1.36em
+    font-size: 1.65em
+    // color: green !important
   h4 
-    font-size: 1.225em
+    font-size: 1.45em
+    // color: orange !important
     letter-spacing: .025em
     font-weight: 300
     //underline?
   p 
     font-size: 0.925em
     font-weight: 300
+    color: $light !important
     @include tablet-phone 
       font-size: 1em
   body 
