--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -1,12 +1,14 @@
 @import '../vars.sass'
 
 .footer
-    margin-top: 220px
+    // margin-top: 220px
     display: flex
     width: 100%
     flex-direction: column
     align-items: center
-    margin-bottom: 122px
+    padding: 2em 0em 1.5em 0em
+    box-shadow: 0px -2px 2px 0px rgba(219,219,219,0.5)
+    // margin-bottom: 122px
     // @include navsnap
     //     margin-top: 70px
     // h3
@@ -49,12 +51,27 @@
     &__cols
         display: flex
         width: 100%
+        height: 100%
+        align-items: center
         // background: coral
         justify-content: space-between
         @include tablet-phone
             flex-direction: column
         &__single
+            display: flex
+            flex-direction: column
+            // align-items: center
+            // align-content: center 
+            // justify-content: center
+            // justify-items: center
             width: 25%
+            height: 100%
+            a, a:visited, a:hover 
+              font-size: .8em
+            a, a:visited 
+              color: $dark
+            a:hover 
+              color: $accent
             @include tablet-phone
                 display: flex
                 align-items: center
@@ -69,20 +86,28 @@
                     flex-direction: row
                     justify-content: space-around
             &__image
-                width: 50%
-                margin: auto
+                display: flex
+                justify-content: center
+                align-items: center
+                align-content: center
+                height: 100%
+                width: 30%
+                margin: 0 auto
                 @include tablet-phone
                     width: 20% 
                     margin: 25px
+                &__container 
+                  width: 100%
             &__links
                 display: flex
-                width: 45%
-                justify-content: space-between
-                margin: 10px 0
-                @include tablet-phone
-                    width: 15%
+                // @include tablet-phone
+                //     width: 15%
+                margin-top: 22px
+                margin-bottom: 6px
                 a
-                    width: 23%
+                    height: 20px 
+                    width: 20px
+                    margin-right: 14px
             &__title
                 display: flex
                 // background: skyblue
