--- a/src/components/page_bottom_signup/page_signup.sass
+++ b/src/components/page_bottom_signup/page_signup.sass
@@ -1,3 +1,5 @@
+@import '../base.sass'
+  
 .page__sign
     text-align: center
     margin-top: 50px
@@ -9,6 +11,6 @@
     hr
         margin: auto
         width: 20%
-        background: #cdccca
+        background: lightgrey
         border: 0
         height: 1px
