--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -3,9 +3,9 @@
     .signup
         padding: 50px 150px
         // margin: 30px 0
-        border: 1px solid gold
+        border: 1px solid $accent
         border-radius: 1.5rem
-        box-shadow: 0px 0px 5px 1px gold
+        box-shadow: 0px 0px 5px 1px $accent
         align-items: center
         display: flex
         flex-direction: column
