--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -1,7 +1,10 @@
+@import "../base.sass"
+
 .wraper
     .faq
         display: flex
         flex-direction: column
+        background: red
         &__section
             display: flex
             justify-content: space-between
@@ -16,10 +19,10 @@
                     width: 100%
                     display: flex
                     flex-direction: column
-                    // background: teal
-                    border-top: 1px solid gold
-                    border-bottom: 1px solid gold
-                    color: gold
+                    background: teal
+                    border-top: 1px solid red
+                    border-bottom: 1px solid red
+                    color: red
                     &__title
                         justify-content: space-between
                         display: flex
