--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -72,7 +72,7 @@
             padding: 50px 20px
         h4
             margin: 10px 0
-            color: gold
+            color: $accent
         p
             flex: 1
         &__info 
@@ -81,7 +81,7 @@
             justify-content: space-between
             display: flex
             h4
-                color: gold
+                color: $accent
     &__image
         width: 50%
         @include edgesnap
