--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -48,7 +48,7 @@
 .program__overview
     display: flex
     // justify-content: space-between
-    background: mintcream
+    background: #f9f9f9
     @include navsnap
         justify-content: space-between
     @include phone-large
