--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -23,10 +23,10 @@
         display: flex
         text-align: center
     h1
-        // background: red
-        a
-            // font-size: .8em
-            font-family: $mainfont
+        width: 100%
+        .image
+            width: 260px 
+            height: auto
     &__logo
         // background: teal
         width: 4.5%
