fixed some styling

--- a/src/components/page_bottom_signup/page_signup.sass
+++ b/src/components/page_bottom_signup/page_signup.sass
@@ -7,7 +7,8 @@
         margin-top: 50px
         margin-bottom: 20px
     p
-        margin-bottom: 20px
+        margin-bottom: 1.25em
+        margin-top: 2.25em
     hr
         margin: auto
         width: 20%
