--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -5,26 +5,27 @@
     // background: teal
     form
         display: flex
+        justify-content: center
         width: 100%
+        margin-bottom: 4.5em
         // background: lightseagreen 
         #mc_embed_signup_scroll
             display: flex
-            justify-content: center
-            width: 100%
+            width: 50%
             .mc-field-group
-                width: 70%
+                width: 100%
             input
+              &[type="submit"], &[type="email"]
+                height: 85%
+                font-size: 0.9em
                 &[type="submit"]
                     background: $accent
                     padding: 10px 35px
                     color: white
-                    font-size: 1rem
-                    height: 100%
-
+                    line-height: 1em
                     border-top-right-radius: 1.3rem
                     border-bottom-right-radius: 1.3rem
                 &[type="email"]
-                    font-size: 1rem
                     padding: 10px
                     width: 100%
                     border: 1px solid $accent
