--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -2,10 +2,7 @@
 .wraper
     .signup
         padding: 50px 150px
-        // margin: 30px 0
-        border: 1px solid $accent
-        border-radius: 1.5rem
-        box-shadow: 0px 0px 5px 1px $accent
+        box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5)
         align-items: center
         display: flex
         flex-direction: column
