--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -11,9 +11,7 @@
             flex-direction: column-reverse
         &__card
             margin: 30px 0
-            border: 1px solid $accent
-            border-radius: 1.5rem
-            box-shadow: 0px 0px 5px 1px $accent
+            box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5)
             width: 60%
             padding: 10px
             display: flex
