--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -22,3 +22,13 @@
             margin-bottom: 25px
             @include navsnap
                 width: 48%
+.light
+    display: flex
+    &__image
+        width: 100%
+    button
+        align-self: flex-start
+        width: 0
+        height: 0
+        background: teal
+        
