--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -12,6 +12,8 @@
         #mc_embed_signup_scroll
             display: flex
             width: 50%
+            @include tablet
+              width: 80%
             .mc-field-group
                 width: 100%
             input
