--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -10,7 +10,7 @@
         justify-content: space-between
         border-bottom: 1px solid lightgrey
         align-items: center
-        @include navsnap
+        @media(max-width: 760px)
             flex-direction: column
         &:first-child
             border-bottom: none
@@ -19,14 +19,15 @@
             width: 65%
             h3 
               color: $dark
-            @include navsnap
+            @media(max-width: 760px)
                 width: 100%
-                justify-content: center
+                text-align: center
+                margin-top: 1.25em
             &__name
                 margin-top: .35em
                 display: flex
                 align-items: center
-                @include navsnap
+                @media(max-width: 760px)
                   justify-content: center
                 h4 
                   margin-right: .5em
@@ -41,5 +42,5 @@
                 color: #686868
         &__img
             width: 30%   
-            @include navsnap
-                width: 100%
+            @media(max-width: 760px)
+                width: 60%
