--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -1,17 +1,29 @@
 @import "../base.sass"
 .wraper
     .signup
-        padding: 50px 150px
+        // padding: 50px 150px
         box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5)
-        align-items: center
+        // align-items: center
+        text-align: center
         display: flex
         flex-direction: column
+        height: 100% 
+        padding: 3.5em 0em
+        #mc_embed_signup
+          form 
+            margin-bottom: 0em !important
         @include edgesnap
-            padding: 20px 15px
+            // padding: 20px 15px
         h3
-            margin-bottom: 20px
+            // margin-bottom: 20px
+            margin-bottom: .75em
         p
-            margin-bottom: 10px
+            // margin-bottom: 10px
+            display: flex
+            justify-content: center
+            margin-bottom: .75em
+            width: 80%
+            align-self: center
        
     .enroll
         display: flex
@@ -20,7 +32,7 @@
         &__body 
             display: flex
             justify-content: space-between
-            margin-top: 50px
+            margin-top: 2.5em
             @include navsnap
                 flex-direction: column
             &__steps
@@ -28,11 +40,11 @@
                 @include navsnap
                     width: 98%
                 &__single
-                    margin-bottom: 40px
-                    h3
-                        margin-bottom: 20px
+                    // margin-bottom: 40px
+                    h4
+                        margin-bottom: 0.5em
                     hr
-                        margin: auto
+                        margin: 1.65em auto
                         width: 30%
                         background: #cdccca
                         border: 0
