--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -8,16 +8,19 @@
         display: flex
         justify-content: space-between
         @include tablet-phone
-            flex-direction: column-reverse
+            flex-direction: column
         &__card
             margin: 30px 0
             box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5)
             width: 60%
-            padding: 10px
+            padding: 1em 2.5em
             display: flex
             flex-direction: column
+            @media(max-width: 950px)
+              font-size: 1.6vw
             @include tablet-phone
                 width: 98%
+                font-size: 10pt
             h4
                 margin: 10px 0
                 color: $accent
@@ -30,6 +33,7 @@
                 display: flex
                 h4
                     color: $accent
+           
         &__image
             width: 38%
             @include edgesnap
@@ -45,10 +49,11 @@
             display: flex
             flex-direction: column
             h4
-                margin-bottom: 15px
+                margin-bottom: .45em
                 color: $accent
                 width: 50%
                 border-bottom: 1px solid $accent
             h5
-             
+              font-size: 1.2em
+              margin-bottom: .2em
             p
