--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -22,13 +22,22 @@
             margin-bottom: 25px
             @include navsnap
                 width: 48%
+.dialog
+    padding: 2px !important
 .light
-    display: flex
+    // display: flex
+    // // &__image
+    // //     width: 100%
     &__image
-        width: 100%
-    button
-        align-self: flex-start
-        width: 0
-        height: 0
-        background: teal
         
+    button
+        // align-self: flex-start
+        // width: 0
+        // height: 0
+        // background: teal
+        border: 1px solid $accent
+        padding: 2px 15px
+        margin: 7px
+        // margin-bottom: 0
+        border-radius: 2rem
+        color: $accent
