--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -101,6 +101,8 @@ button, input[type="submit"], input[type="reset"]
     font: inherit
     cursor: pointer
     outline: inherit
+    -webkit-appearance: none
+    border-radius: 0
 .visuallyhidden 
   border: 0
   clip: rect(0 0 0 0)
