--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -25,11 +25,18 @@
                     padding: 10px 35px
                     color: white
                     line-height: 1em
+                    border-radius: 0
                     border-top-right-radius: 1.3rem
                     border-bottom-right-radius: 1.3rem
+                    border-top-left-radius: 0
+                    border-bottom-left-radius: 0
+                    @include phone-large
+                        padding: 10px 20px
+
                 &[type="email"]
                     padding: 10px
                     width: 100%
                     border: 1px solid $accent
+                    border-radius: 0
                     border-top-left-radius: 1.3rem
                     border-bottom-left-radius: 1.3rem
