--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -99,6 +99,12 @@
             &__link
                 margin-left: 10px
                 margin-top: 20px
+                a, a:visited 
+                  color: $dark
+                  margin-left: .6em
+                &__active
+                    color: $accent !important
+                    text-decoration: underline
     .nav__open, .nav__closed
       position: relatve 
       z-index: 1000
