--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -37,6 +37,8 @@
                 margin-top: 50px
                 h4
                     margin-top: 15px
+            button
+                margin: 20px 0
     
         &__image
             width: 30%
