--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -7,7 +7,7 @@
         text-align: center
         display: flex
         flex-direction: column
-        height: 100% 
+        // height: 100% 
         padding: 3.5em 0em
         #mc_embed_signup
           form 
@@ -50,7 +50,6 @@
                         border: 0
                         height: 1px
             &__image
-
                 display: flex
                 align-items: center
                 width: 40%
