--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -57,7 +57,7 @@
                             height: 100%
                             width: 1.1em
                             transition: all .35s ease-in-out
-                            margin: auto 0
+                            // margin: auto 0
                             &.expanded 
                                 transform: rotateX(-180deg)
                     p 
