--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -52,6 +52,7 @@
                         display: flex
                         line-height: 1em
                         img
+                            align-self: center
                             display: flex
                             justify-self: center 
                             height: 100%
