--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -59,8 +59,8 @@
     &__card
         margin: 30px 0
         width: calc(1100px / 2.1)
-        // background: teal
-        padding: 100px 50px
+        background: teal
+        padding: 7em 2em
         display: flex
         flex-direction: column
         @include edgesnap
