did some work on the banner-background and nav

--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -3,11 +3,11 @@
     &__col
         width: 100%
         display: flex
+        background: red
         @include phone-large
         flex-direction: column
         &__one
             width: 50%
-            
             @include phone-large
                 width: 100%
             &__gatimage
