--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -1,24 +1,52 @@
 @import "../base.sass"
 .background__banner
+    height: 425px !important
+    display: flex
     &__col
         width: 100%
         display: flex
-        justify-content: space-between
+        justify-content: center 
+        align-items: center
+        // background: red
         &__one
+            display: flex 
+            justify-content: center 
+            align-items: center
             width: 35%
+            height: 100%
+            // background: orange
             @include phone-large
                 width: 100%
+            &__image 
+              width: 100%
+              height: 100%
+              max-height: 100%
+              // background: yellow
+              position: relative
+              .gatsby-image-wrapper
+                // display: none !important
+                // display: flex !important
+                // justify-content: center !important
+                position: relative !important 
+                max-height: 100% !important
+              img 
+                max-height: 100% !important
+                width: auto !important
         &__two
             display: flex
             flex-direction: column
+            // background: green
+            max-height: 90%
+            height: 90%
             width: 60%
             // background: seagreen
-            justify-content: center
+            // justify-content: space-between
             @include phone-large
                 width: 100%
             p
-                color: #5d5d5d
-                padding: 50px 0px 20px 0px
+                color: $light
+                padding-top: 3em
+                padding-bottom: 1em
             h2
                 padding: 0px 0px 10px 0px
                 font-size: 45px
