fixed homepage signup

--- a/src/components/buttonRound/buttonround.module.sass
+++ b/src/components/buttonRound/buttonround.module.sass
@@ -10,7 +10,7 @@
     margin-top: 10px
     font-size: 3vw !important
   .buttonRound, button
-      border-radius: .9rem
+      border-radius: 100px
       // border: 1px solid black
       font-size: 0.82em !important
       a
