--- a/src/components/page_bottom_signup/page_signup.sass
+++ b/src/components/page_bottom_signup/page_signup.sass
@@ -2,7 +2,8 @@
   
 .page__sign
     text-align: center
-    margin-top: 50px
+    margin-top: 60px
+    background: pink
     h3
         margin-top: 50px
         margin-bottom: 20px
