--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -24,7 +24,7 @@ $darkgrey: #253031
 //dark is headers and titles, light is less important text, both are used as text colors
 $accent: #A29680
 $dark: #393939
-$light: #5B5B5B
+$lighter: #5B5B5B
 
 //og
 // $accentdark: #102B3F
