--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -35,7 +35,7 @@ html
     font-weight: 300
     // color: red !important
     // padding-top: .62em
-    padding-bottom: 1em
+    // padding-bottom: 1em
     @include tablet-phone 
       font-size: 2.05em
       padding-bottom: 0.7em
