--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -39,8 +39,17 @@
           width: 100%
           justify-content: center
           margin-bottom: .5em
-      p 
-        margin-bottom: 2.15em
+      &__description 
+        display: flex 
+        width: 100%
+        justify-content: center
+        align-self: center
+        align-content: center
+        p 
+          max-width: 70%
+          text-align: center
+          margin: auto 
+          margin-bottom: 2.5em
       &__single
           display: flex
           justify-content: center
@@ -65,14 +74,19 @@
         flex-direction: column
     
     &__card
-        margin: 30px 0
         width: calc(1100px / 2.1)
-        // background: teal
-        padding: 7em 1.8em
+        background: teal
+        padding: 5.5em 1.8em
         display: flex
         flex-direction: column
         @include edgesnap
             padding: 50px 20px
+            width: 43.5%
+            font-size: 1.25vw
+        @media(max-width: 1150px)
+          font-size: 1.4vw
+        @media(max-width: 1050px)
+          width: 43.5%
         @include navsnap
             padding: 0
             width: 50%
@@ -85,6 +99,8 @@
             color: $accent
         p
             flex: 1
+            @media(max-width: 1150px)
+              font-size: .95em
         &__info 
             margin-bottom: 10px
             justify-self: flex-end
@@ -94,8 +110,8 @@
                 color: $accent
     &__image
         width: 50%
-        @include edgesnap
-            margin: auto
+        // @include edgesnap
+        //     margin: auto
         @include navsnap
             width: 45%
             margin: auto
