fixed a lot of styling and add react/gatsby ga plugins

--- a/src/components/spacer/spacer.sass
+++ b/src/components/spacer/spacer.sass
@@ -1,3 +1,6 @@
+@import "../base.sass"
 .spacer
     padding-top: 6.85em
     background: pink
+    @include tablet-phone 
+      padding-top: 5.75em
