--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -16,13 +16,15 @@ html
   overflow-x: hidden
   color: $dark
   @include edgesnap 
-    font-size: 1.15vw
+    font-size: 1.25vw
   @media(max-width: 1000px)
-    font-size: 1.65vw
+    font-size: 1.5vw
   @media(max-width: 850px)
+    font-size: 1.75vw
+  @media(max-width: 750px)
     font-size: 1.875vw
   @include tablet-phone 
-    font-size: 2.38vw
+    font-size: 2.25vw
   @media(max-width: 500px)
     font-size: 3vw
   section 
@@ -52,6 +54,8 @@ html
     font-size: 0.925em
     font-weight: 300
     color: $light !important
+    @media(max-width: 1200px)
+      font-size: 1em
     @include tablet-phone 
       font-size: 1em
   body 
