whaddup with it

--- a/src/components/page_bottom_signup/page_signup.sass
+++ b/src/components/page_bottom_signup/page_signup.sass
@@ -2,14 +2,18 @@
   
 .page__sign
     text-align: center
-    margin-top: 60px
     background: pink
+    display: flex 
+    justify-content: center
+    flex-direction: column
+    align-items: center
     h3
-        margin-top: 50px
-        margin-bottom: 20px
+        margin-top: 2.25em
     p
         margin-bottom: 1.25em
-        margin-top: 2.25em
+        margin-top: 2em
+        max-width: 85%
+        text-align: center
     hr
         margin: auto
         width: 20%
