--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -22,7 +22,7 @@
             @media(max-width: 760px)
                 width: 100%
                 text-align: center
-                margin-top: 1.25em
+                margin-top: 1.55em
             &__name
                 margin-top: .35em
                 display: flex
@@ -40,6 +40,8 @@
             p
                 padding-top: 15px
                 color: #686868
+                @media(max-width: 760px)
+                  text-align: left
         &__img
             width: 30%   
             @media(max-width: 760px)
