--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -6,48 +6,11 @@
     width: 100%
     flex-direction: column
     align-items: center
+    position: relative
     padding: 2em 0em 1.5em 0em
     box-shadow: 0px -2px 2px 0px rgba(219,219,219,0.5)
-    // margin-bottom: 122px
-    // @include navsnap
-    //     margin-top: 70px
-    // h3
-    //     margin-bottom: 50px
-    //     font-family: $mainfont
-    //     color: $medium-grey
-    // p
-    //     font-size: .8rem
-    //     @include navsnap
-    //         width: 70%
-    //         text-align: center
-    // .signup
-    //     width: 40%
-    //     // background: lightskyblue
-    //     display: flex
-    //     justify-content: center
-    //     @include edgesnap
-    //         width: 70%
-    //     @include tablet
-    //         width: 100%
-    //     @import './mailchimp.sass'
-    //     // form
-    //     //     width: 60%   
-    //     //     margin: 30px
-    //     //     display: flex
-    //     //     // background: blue
-    //     //     justify-content: space-between
-    //     //     @include navsnap
-    //     //         width: 80%
-    //     //     input
-    //     //         width: 73%
-    //     //         padding: 20px
-    //     //         border-radius: 2px
-    //     //         border: 1px solid lightgray
-    //     //     button
-    //     //         align-items: center
-    // .icons
-    //     img
-    //         margin: 7px
+    @media(max-width: 720px)
+      padding: 2em 0em 2.25em 0em
     &__cols
         display: flex
         width: 100%
@@ -55,15 +18,19 @@
         align-items: center
         // background: coral
         justify-content: space-between
-        @include tablet-phone
+        @media(max-width: 720px)
             flex-direction: column
+        .leftlink, span 
+          font-size: 0.9em
+        .leftlink 
+          color: $lighter
+        span 
+          color: $dark
+        p 
+          margin-top: .25em
         &__single
             display: flex
             flex-direction: column
-            // align-items: center
-            // align-content: center 
-            // justify-content: center
-            // justify-items: center
             width: 25%
             height: 100%
             a, a:visited, a:hover 
@@ -72,7 +39,9 @@
               color: $dark
             a:hover 
               color: $accent
-            @include tablet-phone
+            @media(max-width: 920px)
+              width: 40%
+            @media(max-width: 720px)
                 display: flex
                 align-items: center
                 flex-direction: column
@@ -81,7 +50,7 @@
                 display: flex
                 align-items: flex-end
                 flex-direction: column
-                @include tablet-phone
+                @media(max-width: 720px)
                     width: 100%
                     flex-direction: row
                     justify-content: space-around
@@ -93,7 +62,11 @@
                 height: 100%
                 width: 30%
                 margin: 0 auto
-                @include tablet-phone
+                @media(max-width: 920px)
+                  width: 38%
+                @media(max-width: 750px)
+                  width: 40%
+                @media(max-width: 720px)
                     width: 20% 
                     margin: 25px
                 &__container 
@@ -105,7 +78,7 @@
                 margin-top: 22px
                 margin-bottom: 6px
                 a
-                    height: 20px 
+                    height: 20px
                     width: 20px
                     margin-right: 14px
             &__title
@@ -113,5 +86,11 @@
                 // background: skyblue
                 
                 text-align: center
+.copy
+  color: $lighter
+  bottom: 0
+  position: absolute
+  margin-bottom: 6px
+  font-size: .9em
 
                 
