--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -24,8 +24,17 @@
             width: 40%
             display: flex
             flex-direction: column
+            justify-content: center
+            background: lightgreen
             @include tablet-phone 
                 width: 100%
+            &__image
+              width: 100% 
+              display: flex 
+              justify-content: center
+              margin-bottom: 1.75em
+              &__container
+                width: 65%
             p
                 text-align: center
                 margin: 5px
@@ -36,24 +45,38 @@
             width: 55%
             // background: seagreen
             display: flex
+            font-size: 12pt !important
             @include tablet-phone 
                 width: 100%
             form
                 width: 100%
                 // background: coral
                 display: flex
-                flex-direction: column    
+                flex-direction: column
+                input, label
+                  font-size: 11pt  
                 input
                     border: none
-                    border-bottom: 1px solid #000
+                    border-bottom: 1px solid lightgrey
                     border-radius: 0px
+                    padding: 0px
                 textarea
                     resize: none
+                    border: 1px solid lightgrey
+                    padding: .65em
+                    
                 button
                     align-self: flex-end
-                    border: 1px solid black 
-                    border-radius: 1.2rem
-                    padding: 5px 25px
+                    border: 1px solid lightgrey
+                    padding: 4.5px 20px
+                    border-radius: 100px
+                    font-size: 0.85em
+                    transition: 0.5s ease-in-out
+                    &:hover 
+                      border: 1px solid black
+                      transform: scale(1.02)
     .pageimage
         width: 50%
         align-self: center
+        @include tablet 
+          width: 75%
