--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -3,7 +3,8 @@
     .bio
         display: flex
         justify-content: space-between
-        @include phone-large
+        // background: red
+        @include tablet
             flex-direction: column-reverse
         &__info
             display: flex
@@ -13,6 +14,10 @@
             width: 68%
             @include navsnap
                 width: 50%
+            @include tablet 
+              text-align: center
+              align-self: center
+              width: 100%
             @include phone-large
                 width: 100%
             &__title
@@ -20,14 +25,22 @@
                 h4
                     margin-top: 15px
                     color: $accent
+                    @include tablet 
+                      margin-bottom: .5em
             button
                 margin: 20px 0
         &__image
-            width: 30%
+          display: flex 
+          justify-content: center
+          width: 30% 
+          @include tablet 
+            width: 100%
+          &__container
+            width: 100%
             @include navsnap
                 width: 50% 
-            @include phone-large
-                width: 100%
+            @include tablet
+                width: 80%
                 // background: teal
     .sponsers
       text-align: center
@@ -57,10 +70,11 @@
           justify-content: center
           width: 15%
           align-items: center
-          @include tablet-phone
+          @include tablet
               width: 25%
           &__image
               width: 70%
+
 
 .home
   .page__sign
@@ -80,6 +94,7 @@
         background: teal
         padding: 5.5em 1.8em
         display: flex
+        // background: red
         flex-direction: column
         @include edgesnap
             padding: 50px 20px
@@ -101,12 +116,20 @@
             // padding: 50px 20px
         @include tablet-phone 
           font-size: 12pt
-        button 
+        .mobile-centered
+          @include tablet 
+            text-align: center
+        &__button 
+          display: flex
           margin: .8em 0em 2em 0em
+          @include tablet 
+            justify-content: center
+            margin: 1.15em 0em 1.5em 0em
         h3 
           margin-bottom: 1em
           @include tablet 
             margin-top: 1em
+            margin-bottom: 0.35em
             text-align: center
           @include tablet-phone 
             font-size: 1.65em
@@ -121,13 +144,13 @@
             flex: 1
             @media(max-width: 1150px)
               font-size: .95em
-            @media(max-width: 780px)
-              font-size: 1.1em
             @include navsnap
               font-size: 1em
               // margin-bottom: 1em
             @include tablet-phone 
               font-size: .885em
+            @include tablet 
+              font-size: 1em
         &__info 
             margin-bottom: 10px
             justify-self: flex-end
@@ -135,17 +158,21 @@
             display: flex
             h4
                 color: $accent
+            &__data 
+              @include tablet 
+                text-align: center
     &__image
         // display: flex 
         // align-content: center
         display: flex
         justify-content: center
         align-content: center
+        // background: red
         width: 50%
         object-fit: cover
         @include tablet
           background: red
-          width: 100vw !important
+          width: 100% !important
         @include tablet
             width: 38%
         @include tablet
@@ -154,7 +181,7 @@
           height: 100%
           width: 100%
           @include tablet 
-            width: 60%
+            width: 80%
         img 
           // height: 100% !important
           // margin: auto
