--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -82,7 +82,8 @@
                     width: 20px
                     margin-right: 14px
             &__title
-                display: flex
+                width: 70%
+                // display: flex
                 // background: skyblue
                 
                 text-align: center
