--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -48,6 +48,7 @@
                 a, a:visited 
                   color: $dark
                   margin-left: .6em
+                  font-size: .95em
                 &__active
                     color: $accent !important
                     text-decoration: underline
