--- a/src/components/page_bottom_signup/page_signup.sass
+++ b/src/components/page_bottom_signup/page_signup.sass
@@ -2,7 +2,7 @@
   
 .page__sign
     text-align: center
-    background: pink
+    // background: pink
     display: flex 
     justify-content: center
     flex-direction: column
