--- a/src/components/spacer/spacer.sass
+++ b/src/components/spacer/spacer.sass
@@ -1,6 +1,6 @@
 @import "../base.sass"
 .spacer
     padding-top: 6.85em
-    background: pink
+    // background: pink
     @include tablet-phone 
       padding-top: 5.75em
