--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -91,7 +91,7 @@
     
     &__card
         width: calc(1100px / 2.1)
-        background: teal
+        // background: teal
         padding: 5.5em 1.8em
         display: flex
         // background: red
