--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -25,7 +25,7 @@
             display: flex
             flex-direction: column
             justify-content: center
-            background: lightgreen
+            // background: lightgreen
             @include tablet-phone 
                 width: 100%
             &__image
