--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -1,8 +1,8 @@
 @import "../base.sass"
 .banner
-    max-height: 425px
-    height: 425px
-    overflow: hidden
+    // max-height: 425px
+    // height: 425px
+    // overflow: hidden
     border-bottom: 1px solid $accent
     .page__section
       height: 100%
