fixed some button stuff

--- a/src/components/buttonRound/buttonround.module.sass
+++ b/src/components/buttonRound/buttonround.module.sass
@@ -3,7 +3,7 @@
 .wrapper
   width: 100%
   display: flex
-  font-size: 12pt
+  font-size: 1em
   @include edgesnap 
     font-size: 1.4vw
   @include phone-large 
