--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -22,6 +22,7 @@
             height: 100%
             @include phone-large
                 width: 100%
+                height: 60%
             @include tablet-phone 
               height: 50%
               width: 100%
@@ -58,6 +59,8 @@
             // justify-content: space-between
             @include tablet-phone 
               height: 50%
+            @include phone-large 
+              height: 40%
               // background: teal
               width: 100%
             &__top
