did some more work on background banner

--- a/src/components/buttonRound/buttonround.module.sass
+++ b/src/components/buttonRound/buttonround.module.sass
@@ -6,6 +6,8 @@
   font-size: 1em
   @include edgesnap 
     font-size: 1.4vw
+  @include tablet 
+    font-size: 2vw
   @include phone-large 
     margin-top: 10px
     font-size: 3vw !important
