--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -2,33 +2,46 @@
 .background__banner
     height: 425px !important
     display: flex
+    @include tablet-phone 
+      height: 100vh !important
     &__col
         width: 100%
         display: flex
         justify-content: center 
         align-items: center
-        // background: red
         &__one
             display: flex 
             justify-content: center 
             align-items: center
+            align-content: center
             width: 35%
             height: 100%
-            // background: orange
-            @include phone-large
+            @include tablet-phone
                 width: 100%
+                height: 50%
             &__image 
+              display: flex 
+              align-content: center
+              align-items: center
+              justify-content: center
               width: 100%
               height: 100%
-              max-height: 100%
-              // background: yellow
-              position: relative
-              .gatsby-image-wrapper
-                position: relative !important 
-                max-height: 100% !important
-              img 
-                max-height: 100% !important
-                width: auto !important
+              &__container
+                width: 100%
+                // height: 100%
+                max-height: 100%
+                // background: yellow
+                position: relative
+                .gatsby-image-wrapper
+                  position: relative !important 
+                  margin: 0 auto
+                  max-height: 100% !important
+                  @include tablet-phone 
+                    height: auto !important
+                    width: auto !important
+                img 
+                  max-height: 100% !important
+                  width: auto !important
         &__two
             display: flex
             flex-direction: column
@@ -38,6 +51,8 @@
             height: 100%
             width: 65%
             padding: 3em 0em
+            @media(max-width: 800px)
+              width: 60%
             // background: seagreen
             // justify-content: space-between
             &__top
@@ -52,7 +67,8 @@
                 width: 100%
               button 
                 margin-top: 1.25em
-            @include phone-large
+            @include tablet-phone
+                height: 50%
                 width: 100%
             // p
             //     color: $light
