--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -14,7 +14,7 @@
             width: 68%
             @include navsnap
                 width: 50%
-            @include tablet 
+            @include tablet
               text-align: center
               align-self: center
               width: 100%
@@ -25,7 +25,7 @@
                 h4
                     margin-top: 15px
                     color: $accent
-                    @include tablet 
+                    @include tablet
                       margin-bottom: .5em
                 &__button 
                   // display: none
@@ -39,6 +39,7 @@
         &__image
           display: flex 
           align-items: center
+          justify-content: center
           width: 30% 
           @include tablet 
             width: 100%
@@ -48,6 +49,7 @@
                 width: 50% 
             @include tablet
                 width: 80%
+                margin: auto
                 // background: teal
     .sponsers
       text-align: center
@@ -70,7 +72,7 @@
           text-align: center
           margin: auto 
           margin-bottom: 2.5em
-          @include tablet-phone 
+          @include tablet
             max-width: 100%
       &__single
           display: flex
@@ -111,6 +113,7 @@
           font-size: 1.4vw
         @media(max-width: 1050px)
           width: 43.5%
+          // font-size: 1.8vw
         @include tablet
             padding: 0
             width: 100%
@@ -121,7 +124,7 @@
         @include phone-large
             // margin: 0
             // padding: 50px 20px
-        @include tablet-phone 
+        @include tablet
           font-size: 12pt
         .mobile-centered
           @include tablet 
@@ -129,7 +132,7 @@
         &__button 
           display: flex
           margin: .8em 0em 2em 0em
-          @include tablet 
+          @include tablet
             justify-content: center
             margin: 1.15em 0em 1.5em 0em
         h3 
@@ -138,14 +141,14 @@
             margin-top: 1em
             margin-bottom: 0.35em
             text-align: center
-          @include tablet-phone 
+          @include tablet
             font-size: 1.65em
         h4
             margin: 10px 0
             color: $accent
             @include navsnap
               margin: 6px 0px
-            @include tablet-phone 
+            @include tablet
               font-size: 1.15em
         p
             flex: 1
@@ -154,10 +157,8 @@
             @include navsnap
               font-size: 1em
               // margin-bottom: 1em
-            @include tablet-phone 
-              font-size: .885em
-            @include tablet 
-              font-size: 1em
+            @include tablet
+              font-size: .88em
         &__info 
             margin-bottom: 10px
             justify-self: flex-end
@@ -166,7 +167,7 @@
             h4
                 color: $accent
             &__data 
-              @include tablet 
+              @include tablet
                 text-align: center
     &__image
         // display: flex 
@@ -183,7 +184,7 @@
             width: 80%
         &__container 
           width: 100%
-          @include tablet 
+          @include tablet
             width: 80%
         img 
           // height: 100% !important
