--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -8,7 +8,9 @@
         justify-content: center
         width: 100%
         margin-bottom: 4.5em
-        // background: lightseagreen 
+        // background: lightseagreen
+        label
+          height: 100% 
         #mc_embed_signup_scroll
             display: flex
             width: 50%
@@ -20,6 +22,7 @@
               &[type="submit"], &[type="email"]
                 height: 85%
                 font-size: 0.9em
+                margin: 0
                 &[type="submit"]
                     background: $accent
                     padding: 10px 35px
