fixed some mobile styling errors

--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -1,5 +1,7 @@
 @import "../base.sass"
-.team
+.wraper 
+  margin-top: 2em
+  .team
     display: flex
     flex-direction: column-reverse
     &__mem
