--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -3,7 +3,8 @@
     .pageinfo
         text-align: center
         h3
-            margin-bottom: 30px
+            margin-bottom: 1.55em
+            margin-top: 2em
         p
             margin-bottom: 50px
         hr
@@ -41,3 +42,13 @@
         // margin-bottom: 0
         border-radius: 2rem
         color: $accent
+
+
+.ReactModalPortal
+  .ReactModal__Overlay, .ReactModal__Overlay--after-open
+    z-index: 9998 !important
+    .ReactModal__Content, .ReactModal__Content--after-open
+      .ril-outer, .ril__outer, .ril__outerAnimating  
+        .ril-inner, .ril__inner
+          img 
+            z-index: 9999 !important
