--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -36,6 +36,13 @@
                 display: flex
                 h4
                     color: $accent
+                @include phone-large 
+                  .mobile-small 
+                    font-size: 2.5vw
+                    display: flex 
+                    flex-direction: column 
+                    justify-content: center
+                    text-align: center
            
         &__image
             width: 38%
