--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -57,3 +57,8 @@
                     width: 98%
                 &__gats
                     width: 100%
+
+
+
+.gatsby-background-image-tbsukwk::after
+   display: none
