--- a/src/components/mc_sign_up/mc_sign_up.sass
+++ b/src/components/mc_sign_up/mc_sign_up.sass
@@ -37,7 +37,7 @@
                         padding: 10px 20px
 
                 &[type="email"]
-                    padding: 10px
+                    padding: 2px 0px 2px 9px
                     width: 100%
                     border: 1px solid $accent
                     border-radius: 0
