--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -1,9 +1,10 @@
 @import "../base.sass"
 .background__banner
     height: 425px !important
+    border-bottom: 0.5px solid $accent
     display: flex
     @include tablet-phone 
-      height: 100vh !important
+      height: 60vh !important
     &__col
         width: 100%
         display: flex
@@ -18,7 +19,8 @@
             height: 100%
             @include tablet-phone
                 width: 100%
-                height: 50%
+                height: 60%
+                // background: lightgreen
             &__image 
               display: flex 
               align-content: center
@@ -27,27 +29,43 @@
               width: 100%
               height: 100%
               &__container
+                // background: red
+                object-position: left !important
                 width: 100%
-                // height: 100%
+                height: 100%
                 max-height: 100%
                 // background: yellow
                 position: relative
                 @include tablet-phone 
-                  
-                .gatsby-image-wrapper
-                  position: relative !important 
-                  margin: 0 auto
+                    height: 80%
+                    // background: pink
+                    // width: auto
+                .gatsby-image-wrapper, img 
+                  object-fit: contain !important
+                  object-position: left !important
+                  height: 100% !important
                   max-height: 100% !important
                   @include tablet-phone 
-                    height: auto !important
-                    width: auto !important
+                    object-position: center !important
                 img 
-                  max-height: 100% !important
-                  width: auto !important
+                  height: 100% !important
+                  
+                  // .gatsby-image-wrapper
+                  //   display: flex !important
+                  //   position: relative !important 
+                  //   margin: 0 auto
+                  //   max-height: 100% !important
+                  //   height: 100% !important
+                  //   @include tablet-phone 
+                  //     height: auto !important
+                  //     width: auto !important
+                  //   img 
+                  //     max-height: 100% !important
+                  //     width: auto !important
         &__two
             display: flex
             flex-direction: column
-            justify-content: space-between
+            justify-content: center
             // background: green
             max-height: 100%
             height: 100%
@@ -64,13 +82,16 @@
               display: flex 
               flex-direction: column
               align-items: flex-end
+              @include tablet-phone 
+                align-items: center !important
+                text-align: center !important
               &__btn
                 display: flex
                 width: 100%
               button 
                 margin-top: 1.25em
             @include tablet-phone
-                height: 50%
+                height: 40%
                 width: 100%
             // p
             //     color: $light
