--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -1,5 +1,5 @@
 @import "../base.sass"
-.wraper
+.wrapper
     .signup
         // padding: 50px 150px
         box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5)
@@ -58,6 +58,14 @@
                 &__gats
                     width: 100%
 
+.background__banner
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: bottom right
+  @include tablet-phone 
+    background-size: contain !important
+    background-position: top right !important
+    background-size: auto 50% !important
 
 
 .gatsby-background-image-tbsukwk::after
