--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -64,3 +64,8 @@
               font-size: 1.2em
               margin-bottom: .3em
             p
+
+
+.background__banner 
+  background-size: cover !important
+  background-position: 70% 30% !important
